implementatie van: - persistence layer - service layer - api layer obv de door openAPI gegenereerde controller en delegateService
