# haidesu-liquibase/src/main/java/com/haidesu/entities/User.java
@@ -1,0 +1,38 @@
+package com.haidesu.entities;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.OffsetDateTime;
+
+@Entity
+@Table(name = "HAIDESU_USERS")
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class User {
+
+    @Id
+    @GeneratedValue
+    @Column(name = "ID", nullable = false, updatable = false)
+    private Long id;
+
+    @Column(name = "USERNAME", nullable = false)
+    private String username;
+
+    @Column(name = "PASSWORD", nullable = false)
+    private String password;
+
+    @Column(name = "EMAIL", nullable = false)
+    private String email;
+
+    @Column(name = "SECRETWORD", nullable = false)
+    private String secretword;
+
+    @Column(name = "CREATED_AT", nullable = false)
+    private OffsetDateTime createdAt;
+}
