# haidesu-openapi/src/main/resources/openapi/openapi.yaml
@@ -46,7 +46,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/CreateUser'
       responses:
         201:
           description: User added succesfully!
@@ -134,12 +134,24 @@ components:
         - password
         - email
         - secretword
+      allOf:
+        - type: object
+          required:
+            - id
+          properties:
+            id:
+              type: integer
+              description: Unique user ID
+              format: int64
+        - $ref: '#/components/schemas/UserProperties'
+    UserProperties:
+      required:
+        - username
+        - password
+        - email
+        - secretword
       type: object
       properties:
-        id:
-          type: integer
-          description: Unique user ID
-          format: int64
         username:
           type: string
           description: Name of the customer
@@ -158,7 +170,7 @@ components:
           example: First address is?
     CreateUser:
       allOf:
-        - $ref: '#/components/schemas/User'
+        - $ref: '#/components/schemas/UserProperties'
     UpdateUser:
       type: object
       properties:
